Substituted Runtime.getRuntime() with ProcessBuilder.